[project]
name = "serverless-http-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.3",
    "httpx>=0.27.2",
    "mangum>=0.19.0",
    "requests>=2.32.3",
    "rich>=13.9.3",
    "uvicorn>=0.32.0",
]
